lab6/y.output
状态 35conflicts: 1 shift/reduce
状态 37conflicts: 1 shift/reduce


语法

    0 $accept: program $end

    1 program: exp

    2 lvalue: ID
    3       | one
    4       | oneormore

    5 one: ID LBRACK exp RBRACK
    6    | ID DOT ID

    7 oneormore: one DOT ID
    8          | one LBRACK exp RBRACK

    9 recorditem: ID EQ exp

   10 recorditems: recorditem COMMA recorditems
   11            | recorditem

   12 args: exp COMMA args
   13     | exp

   14 exps: exp SEMICOLON exps
   15     | exp

   16 expseq: exps

   17 exp: lvalue
   18    | NIL
   19    | INT
   20    | STRING
   21    | LPAREN expseq RPAREN
   22    | LPAREN RPAREN
   23    | ID LPAREN args RPAREN
   24    | ID LPAREN RPAREN
   25    | exp PLUS exp
   26    | exp MINUS exp
   27    | exp TIMES exp
   28    | exp DIVIDE exp
   29    | MINUS exp
   30    | exp EQ exp
   31    | exp NEQ exp
   32    | exp LT exp
   33    | exp LE exp
   34    | exp GT exp
   35    | exp GE exp
   36    | exp AND exp
   37    | exp OR exp
   38    | ID LBRACE recorditems RBRACE
   39    | ID LBRACE RBRACE
   40    | lvalue ASSIGN exp
   41    | IF exp THEN exp ELSE exp
   42    | IF exp THEN exp
   43    | WHILE exp DO exp
   44    | FOR ID ASSIGN exp TO exp DO exp
   45    | BREAK
   46    | LET decs IN expseq END
   47    | LET decs IN END
   48    | LET IN expseq END
   49    | ID LBRACK exp RBRACK OF exp

   50 vardec: VAR ID ASSIGN exp
   51       | VAR ID COLON ID ASSIGN exp

   52 tydec: tydec_one tydec
   53      | tydec_one

   54 tydec_one: TYPE ID EQ ty

   55 ty: ID
   56   | LBRACE tyfields RBRACE
   57   | LBRACE RBRACE
   58   | ARRAY OF ID

   59 tyfield: ID COLON ID

   60 tyfields: tyfield COMMA tyfields
   61         | tyfield

   62 fundec: fundec_one fundec
   63       | fundec_one

   64 fundec_one: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   65           | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp
   66           | FUNCTION ID LPAREN RPAREN EQ exp
   67           | FUNCTION ID LPAREN RPAREN COLON ID EQ exp

   68 dec: tydec
   69    | fundec
   70    | vardec

   71 decs: dec decs
   72     | dec


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 2 5 6 7 9 23 24 38 39 44 49 50 51 54 55 58 59 64 65 66 67
STRING (259) 20
INT (260) 19
COMMA (261) 10 12 60
COLON (262) 51 59 65 67
SEMICOLON (263) 14
LPAREN (264) 21 22 23 24 64 65 66 67
RPAREN (265) 21 22 23 24 64 65 66 67
LBRACK (266) 5 8 49
RBRACK (267) 5 8 49
LBRACE (268) 38 39 56 57
RBRACE (269) 38 39 56 57
DOT (270) 6 7
PLUS (271) 25
MINUS (272) 26 29
TIMES (273) 27
DIVIDE (274) 28
EQ (275) 9 30 54 64 65 66 67
NEQ (276) 31
LT (277) 32
LE (278) 33
GT (279) 34
GE (280) 35
AND (281) 36
OR (282) 37
ASSIGN (283) 40 44 50 51
ARRAY (284) 58
IF (285) 41 42
THEN (286) 41 42
ELSE (287) 41
WHILE (288) 43
FOR (289) 44
TO (290) 44
DO (291) 43 44
LET (292) 46 47 48
IN (293) 46 47 48
END (294) 46 47 48
OF (295) 49 58
BREAK (296) 45
NIL (297) 18
FUNCTION (298) 64 65 66 67
VAR (299) 50 51
TYPE (300) 54
UMINUS (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
lvalue (49)
    on left: 2 3 4, on right: 17 40
one (50)
    on left: 5 6, on right: 3 7 8
oneormore (51)
    on left: 7 8, on right: 4
recorditem (52)
    on left: 9, on right: 10 11
recorditems (53)
    on left: 10 11, on right: 10 38
args (54)
    on left: 12 13, on right: 12 23
exps (55)
    on left: 14 15, on right: 14 16
expseq (56)
    on left: 16, on right: 21 46 48
exp (57)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 41 42 43 44 45 46 47 48 49, on right: 1 5 8 9
    12 13 14 15 25 26 27 28 29 30 31 32 33 34 35 36 37 40 41 42 43
    44 49 50 51 64 65 66 67
vardec (58)
    on left: 50 51, on right: 70
tydec (59)
    on left: 52 53, on right: 52 68
tydec_one (60)
    on left: 54, on right: 52 53
ty (61)
    on left: 55 56 57 58, on right: 54
tyfield (62)
    on left: 59, on right: 60 61
tyfields (63)
    on left: 60 61, on right: 56 60 64 65
fundec (64)
    on left: 62 63, on right: 62 69
fundec_one (65)
    on left: 64 65 66 67, on right: 62 63
dec (66)
    on left: 68 69 70, on right: 71 72
decs (67)
    on left: 71 72, on right: 46 47 71


State 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program    转到状态 12
    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 16


State 1

    2 lvalue: ID .
    5 one: ID . LBRACK exp RBRACK
    6    | ID . DOT ID
   23 exp: ID . LPAREN args RPAREN
   24    | ID . LPAREN RPAREN
   38    | ID . LBRACE recorditems RBRACE
   39    | ID . LBRACE RBRACE
   49    | ID . LBRACK exp RBRACK OF exp

    LPAREN  shift, and go to state 17
    LBRACK  shift, and go to state 18
    LBRACE  shift, and go to state 19
    DOT     shift, and go to state 20

    $default  reduce using rule 2 (lvalue)


State 2

   20 exp: STRING .

    $default  reduce using rule 20 (exp)


State 3

   19 exp: INT .

    $default  reduce using rule 19 (exp)


State 4

   21 exp: LPAREN . expseq RPAREN
   22    | LPAREN . RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 21
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exps       转到状态 22
    expseq     转到状态 23
    exp        转到状态 24


State 5

   29 exp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 25


State 6

   41 exp: IF . exp THEN exp ELSE exp
   42    | IF . exp THEN exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 26


State 7

   43 exp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 27


State 8

   44 exp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 28


State 9

   46 exp: LET . decs IN expseq END
   47    | LET . decs IN END
   48    | LET . IN expseq END

    IN        shift, and go to state 29
    FUNCTION  shift, and go to state 30
    VAR       shift, and go to state 31
    TYPE      shift, and go to state 32

    vardec      转到状态 33
    tydec       转到状态 34
    tydec_one   转到状态 35
    fundec      转到状态 36
    fundec_one  转到状态 37
    dec         转到状态 38
    decs        转到状态 39


State 10

   45 exp: BREAK .

    $default  reduce using rule 45 (exp)


State 11

   18 exp: NIL .

    $default  reduce using rule 18 (exp)


State 12

    0 $accept: program . $end

    $end  shift, and go to state 40


State 13

   17 exp: lvalue .
   40    | lvalue . ASSIGN exp

    ASSIGN  shift, and go to state 41

    $default  reduce using rule 17 (exp)


State 14

    3 lvalue: one .
    7 oneormore: one . DOT ID
    8          | one . LBRACK exp RBRACK

    LBRACK  shift, and go to state 42
    DOT     shift, and go to state 43

    $default  reduce using rule 3 (lvalue)


State 15

    4 lvalue: oneormore .

    $default  reduce using rule 4 (lvalue)


State 16

    1 program: exp .
   25 exp: exp . PLUS exp
   26    | exp . MINUS exp
   27    | exp . TIMES exp
   28    | exp . DIVIDE exp
   30    | exp . EQ exp
   31    | exp . NEQ exp
   32    | exp . LT exp
   33    | exp . LE exp
   34    | exp . GT exp
   35    | exp . GE exp
   36    | exp . AND exp
   37    | exp . OR exp

    PLUS    shift, and go to state 44
    MINUS   shift, and go to state 45
    TIMES   shift, and go to state 46
    DIVIDE  shift, and go to state 47
    EQ      shift, and go to state 48
    NEQ     shift, and go to state 49
    LT      shift, and go to state 50
    LE      shift, and go to state 51
    GT      shift, and go to state 52
    GE      shift, and go to state 53
    AND     shift, and go to state 54
    OR      shift, and go to state 55

    $default  reduce using rule 1 (program)


State 17

   23 exp: ID LPAREN . args RPAREN
   24    | ID LPAREN . RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 56
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    args       转到状态 57
    exp        转到状态 58


State 18

    5 one: ID LBRACK . exp RBRACK
   49 exp: ID LBRACK . exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 59


State 19

   38 exp: ID LBRACE . recorditems RBRACE
   39    | ID LBRACE . RBRACE

    ID      shift, and go to state 60
    RBRACE  shift, and go to state 61

    recorditem   转到状态 62
    recorditems  转到状态 63


State 20

    6 one: ID DOT . ID

    ID  shift, and go to state 64


State 21

   22 exp: LPAREN RPAREN .

    $default  reduce using rule 22 (exp)


State 22

   16 expseq: exps .

    $default  reduce using rule 16 (expseq)


State 23

   21 exp: LPAREN expseq . RPAREN

    RPAREN  shift, and go to state 65


State 24

   14 exps: exp . SEMICOLON exps
   15     | exp .
   25 exp: exp . PLUS exp
   26    | exp . MINUS exp
   27    | exp . TIMES exp
   28    | exp . DIVIDE exp
   30    | exp . EQ exp
   31    | exp . NEQ exp
   32    | exp . LT exp
   33    | exp . LE exp
   34    | exp . GT exp
   35    | exp . GE exp
   36    | exp . AND exp
   37    | exp . OR exp

    SEMICOLON  shift, and go to state 66
    PLUS       shift, and go to state 44
    MINUS      shift, and go to state 45
    TIMES      shift, and go to state 46
    DIVIDE     shift, and go to state 47
    EQ         shift, and go to state 48
    NEQ        shift, and go to state 49
    LT         shift, and go to state 50
    LE         shift, and go to state 51
    GT         shift, and go to state 52
    GE         shift, and go to state 53
    AND        shift, and go to state 54
    OR         shift, and go to state 55

    $default  reduce using rule 15 (exps)


State 25

   25 exp: exp . PLUS exp
   26    | exp . MINUS exp
   27    | exp . TIMES exp
   28    | exp . DIVIDE exp
   29    | MINUS exp .
   30    | exp . EQ exp
   31    | exp . NEQ exp
   32    | exp . LT exp
   33    | exp . LE exp
   34    | exp . GT exp
   35    | exp . GE exp
   36    | exp . AND exp
   37    | exp . OR exp

    $default  reduce using rule 29 (exp)


State 26

   25 exp: exp . PLUS exp
   26    | exp . MINUS exp
   27    | exp . TIMES exp
   28    | exp . DIVIDE exp
   30    | exp . EQ exp
   31    | exp . NEQ exp
   32    | exp . LT exp
   33    | exp . LE exp
   34    | exp . GT exp
   35    | exp . GE exp
   36    | exp . AND exp
   37    | exp . OR exp
   41    | IF exp . THEN exp ELSE exp
   42    | IF exp . THEN exp

    PLUS    shift, and go to state 44
    MINUS   shift, and go to state 45
    TIMES   shift, and go to state 46
    DIVIDE  shift, and go to state 47
    EQ      shift, and go to state 48
    NEQ     shift, and go to state 49
    LT      shift, and go to state 50
    LE      shift, and go to state 51
    GT      shift, and go to state 52
    GE      shift, and go to state 53
    AND     shift, and go to state 54
    OR      shift, and go to state 55
    THEN    shift, and go to state 67


State 27

   25 exp: exp . PLUS exp
   26    | exp . MINUS exp
   27    | exp . TIMES exp
   28    | exp . DIVIDE exp
   30    | exp . EQ exp
   31    | exp . NEQ exp
   32    | exp . LT exp
   33    | exp . LE exp
   34    | exp . GT exp
   35    | exp . GE exp
   36    | exp . AND exp
   37    | exp . OR exp
   43    | WHILE exp . DO exp

    PLUS    shift, and go to state 44
    MINUS   shift, and go to state 45
    TIMES   shift, and go to state 46
    DIVIDE  shift, and go to state 47
    EQ      shift, and go to state 48
    NEQ     shift, and go to state 49
    LT      shift, and go to state 50
    LE      shift, and go to state 51
    GT      shift, and go to state 52
    GE      shift, and go to state 53
    AND     shift, and go to state 54
    OR      shift, and go to state 55
    DO      shift, and go to state 68


State 28

   44 exp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 69


State 29

   48 exp: LET IN . expseq END

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exps       转到状态 22
    expseq     转到状态 70
    exp        转到状态 24


State 30

   64 fundec_one: FUNCTION . ID LPAREN tyfields RPAREN EQ exp
   65           | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp
   66           | FUNCTION . ID LPAREN RPAREN EQ exp
   67           | FUNCTION . ID LPAREN RPAREN COLON ID EQ exp

    ID  shift, and go to state 71


State 31

   50 vardec: VAR . ID ASSIGN exp
   51       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 72


State 32

   54 tydec_one: TYPE . ID EQ ty

    ID  shift, and go to state 73


State 33

   70 dec: vardec .

    $default  reduce using rule 70 (dec)


State 34

   68 dec: tydec .

    $default  reduce using rule 68 (dec)


State 35

   52 tydec: tydec_one . tydec
   53      | tydec_one .

    TYPE  shift, and go to state 32

    TYPE      [reduce using rule 53 (tydec)]
    $default  reduce using rule 53 (tydec)

    tydec      转到状态 74
    tydec_one  转到状态 35


State 36

   69 dec: fundec .

    $default  reduce using rule 69 (dec)


State 37

   62 fundec: fundec_one . fundec
   63       | fundec_one .

    FUNCTION  shift, and go to state 30

    FUNCTION  [reduce using rule 63 (fundec)]
    $default  reduce using rule 63 (fundec)

    fundec      转到状态 75
    fundec_one  转到状态 37


State 38

   71 decs: dec . decs
   72     | dec .

    FUNCTION  shift, and go to state 30
    VAR       shift, and go to state 31
    TYPE      shift, and go to state 32

    $default  reduce using rule 72 (decs)

    vardec      转到状态 33
    tydec       转到状态 34
    tydec_one   转到状态 35
    fundec      转到状态 36
    fundec_one  转到状态 37
    dec         转到状态 38
    decs        转到状态 76


State 39

   46 exp: LET decs . IN expseq END
   47    | LET decs . IN END

    IN  shift, and go to state 77


State 40

    0 $accept: program $end .

    $default  接受


State 41

   40 exp: lvalue ASSIGN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 78


State 42

    8 oneormore: one LBRACK . exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 79


State 43

    7 oneormore: one DOT . ID

    ID  shift, and go to state 80


State 44

   25 exp: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 81


State 45

   26 exp: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 82


State 46

   27 exp: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 83


State 47

   28 exp: exp DIVIDE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 84


State 48

   30 exp: exp EQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 85


State 49

   31 exp: exp NEQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 86


State 50

   32 exp: exp LT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 87


State 51

   33 exp: exp LE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 88


State 52

   34 exp: exp GT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 89


State 53

   35 exp: exp GE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    lvalue     转到状态 13
    one        转到状态 14
    oneormore  转到状态 15
    exp        转到状态 90

